upload package as form data
